--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,8 @@ if (APPLE)
     set(RTAUDIO_API_PULSE OFF CACHE BOOL "Disabling Pulse on MacOS" FORCE)
 endif ()
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/deps/rtaudio EXCLUDE_FROM_ALL)
+#  - oneTBB
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/deps/oneTBB EXCLUDE_FROM_ALL)
 
 
 #################################################
@@ -101,17 +103,19 @@ target_sources(${PROJECT_NAME}
         PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/Client.h
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/Client.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/core/utils/CircularQueue.h
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/utils/CMRCFileBuffer.h
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/utils/conversion.h
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/utils/cp1252_to_utf8.h
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/utils/ServiceDiscovery.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/core/utils/RingBuffer.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/core/utils/TBBRingBuffer.h
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/audio/AudioIO.h
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/audio/AudioIO.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/audio/AudioRenderer.h
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/audio/AudioRenderer.tpp
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/audio/AudioMixer.h
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/audio/AudioMixer.tpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/core/audio/RingBuffer.h
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/webrtc/ConnectionService.h
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/webrtc/ConnectionService.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/src/core/webrtc/PeerConnection.h
@@ -175,6 +179,7 @@ target_link_libraries(${PROJECT_NAME}
         DigitalStage::ApiStatic
         DigitalStage::AuthStatic
         DeviceId::DeviceId
+        TBB::tbb
         Threads::Threads
         udp-discovery
         3dtiAudioToolkitStatic
