--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,8 +47,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install libssl-dev libsrtp2-dev libgl-dev libsecret-1-dev pkg-config libasound2-dev libjack-dev
-          conan profile new default --detect
-          conan profile update settings.compiler.libcxx=libstdc++17 default
+        #conan profile new default --detect
+        #conan profile update settings.compiler.libcxx=libstdc++17 default
           conan install -if build --build missing .
       - name: Configure CMake
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
