--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,10 @@ jobs:
       - uses: actions/checkout@v2
       #- name: fetchtags
       #  run: git fetch --unshallow --tags
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v2
+        with:
+          version: '6.2.1'
       - name: Checkout Submodules
         run: git submodule update --init --recursive
       - name: Download Conan package manager
