--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,16 +56,18 @@ jobs:
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
       - name: Build with CMake
         run: cmake --build build --config ${{ matrix.config.build_type }}
-      - name: Publish app bundle
+      - name: Pack
+        run: cpack
+      - name: Publish app
         uses: svenstaro/upload-release-action@v2
         if: ${{ matrix.config.os == 'macos-10.15' }}
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: build/*.app
+          file: build/*.dmg
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
-      - name: Publish app bundle
+      - name: Publish deb
         uses: svenstaro/upload-release-action@v2
         if: ${{ matrix.config.os == 'ubuntu-latest' }}
         with:
