--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -363,4 +363,5 @@ if (CMAKE_BUILD_TYPE MATCHES Release)
         set(CPACK_PACKAGE_NAME "ds-client")
         set(CPACK_GENERATOR "DEB")
     endif ()
+    include(CPack)
 endif ()
