--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -12,17 +12,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: Codesign executable
-        env:
-          CODESIGN_CERTIFICATE: ${{ secrets.CODESIGN_CERTIFICATE }}
-          CODESIGN_CERTIFICATE_PASSWORD: ${{ secrets.CODESIGN_CERTIFICATE_PASSWORD }}
-        run: |
-          echo $CODESIGN_CERTIFICATE | base64 —decode > certificate.p12
-          security create-keychain -p temp_pass build.keychain security default-keychain -s build.keychain
-          security unlock-keychain -p temp_pass build.keychain
-          security import certificate.p12 -k build.keychain -P $CODESIGN_CERTIFICATE_PASSWORD -T /usr/bin/codesign
-          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k temp_pass build.keychain
-          export CODESIGN_CERTIFICATE_NAME="Developer ID Application: Tobias Hegemann (JH3275598G)"
+      - name: Install codesign certificates
+        uses: apple-actions/import-codesign-certs@v1
+          with:
+            p12-file-base64: ${{ secrets.CODESIGN_CERTIFICATE }}
+            p12-password: ${{ secrets.CODESIGN_CERTIFICATE_PASSWORD }}
       - name: Install Qt6
         uses: jurplel/install-qt-action@v2
         with:
@@ -30,7 +24,8 @@ jobs:
       - name: Install depedencies using brew
         run: brew install nlohmann-json cpprestsdk openssl eigen cereal
       - name: Configure CMake
-        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
+        run: |
+        cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DCODESIGN_CERTIFICATE_NAME="Developer ID Application: Tobias Hegemann (JH3275598G)"
       - name: Build with CMake
         run: cmake --build build --config Release
       - name: Bundle with CPack
